style: fix modal body vertical spacing

--- a/app/src/components/common/TestURLModal/index.scss
+++ b/app/src/components/common/TestURLModal/index.scss
@@ -11,11 +11,10 @@
     }
   }
   .ant-divider {
-    margin-top: 1rem;
-    margin-bottom: 40px;
+    margin: 1rem 0;
   }
   &-body {
-    padding: 40px 35px;
+    padding: 16px 30px;
     padding-top: 0;
 
     .source-condition-input-wrapper,
